test/fail/generated/test_Softmin_multidim/model.pb
pytorch0.3:w

01"Neg

12"Softmax*
axis torch-jit-exportZ
0





b
2





B